# raman-for-glucose-measurement

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
.devcontainer/latex/: Dockerfile  devcontainer.json  docker-compose.yml
.devcontainer/python/: Dockerfile  devcontainer.json  docker-compose.yml
data/SERs/ls6/: coin1_600_785 nm_30 s_1_2024_12_09_12_43_42_01.l6s  coin1_600_785 nm_30 s_1_2024_12_09_12_44_15_01.l6s  coin1_600_785 nm_30 s_1_2024_12_09_12_44_46_01.l6s  coin1_600_785 nm_30 s_1_2024_12_09_12_45_18_01.l6s  coin1_600_785 nm_30 s_1_2024_12_09_12_45_50_01.l6s  coin2_600_785 nm_30 s_1_2024_12_09_12_46_47_01.l6s  coin2_600_785 nm_30 s_1_2024_12_09_12_47_21_01.l6s  coin2_600_785 nm_30 s_1_2024_12_09_12_48_24_01.l6s  (+12 more)
data/pilot/: s3.csv  s4.csv  s5.csv  s6.csv  s7.csv  s8.csv
jupyter/: 20240905-blood-98vs186.ipynb  20241015-penetration.ipynb  20241031-emsc.ipynb  20241118-emsc-glucose-water.ipynb  20241211-noisefloor_and_accumulation.ipynb  20241212-SER.ipynb  20241217-Glucose-Concentration-In-Water.ipynb  20241217-GlucoseWith5x.ipynb  20241224-BloodGlucoseSERsand5x.ipynb  20241230-NailOnGlucose.ipynb  20250509-load-data-to-mongodb.ipynb  20250510-blood-glucose-emsc.ipynb  20250510-finger-emsc.ipynb  20250609-blood-emsc.ipynb  temp.ipynb
raman/: __init__.py  database.py  dataset.py  helper.py  model.py  sample.py  spectra.py
raman/_arch/: sample.py
raman/spectra/: __init__.py  blood.py  finger.py  function.py  reference.py
raman_for_glucose_measurement/: helper.py
scripts/: load-data-to-mongodb.ipynb
(+574 files in other folders)
