[project]
name = "raman"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "akraradets", email = "akraradets@gmail.com"},
]
dependencies = [
    "numpy>=2.1.1",
    "pandas>=2.2.2",
    "rampy>=0.5.2",
    "matplotlib>=3.9.2",
    "chemotools>=0.1.5",
]
requires-python = "==3.11.*"
readme = "README.md"
license = {text = "MIT"}


[project.optional-dependencies]
jupyter = [
    "ipykernel>=6.29.5",
]
[tool.pdm]
distribution = false
