[project]
name = "raman-for-glucose-measurement"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.1.1",
    "pandas>=2.2.2",
    "rampy>=0.5.2",
    "matplotlib>=3.9.2",
    "chemotools>=0.1.5",
    "nbconvert>=7.16.4",
    "pandoc>=2.4",
    "pymongo[srv]>=4.12.1",
    "pydantic>=2.11.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]

[tool.setuptools]
packages = ["raman"]
